--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>IMOBILIÁRIA E NEGÓCIOS AGROPECUÁRIOS</h2>
             <h3>CRECI: 3485-MS</h3>
             <div>
-                <button>Entre em contato agora</button>
+                <a class="button" href="https://api.whatsapp.com/send?phone=556792825740">Entre em contato agora</a>
             </div>
         </div>
     </header>
